[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Body_Shield_V2.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Pawns/Pawn_17/Parts/Pawn_17_Stinger.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Pawns/Pawn_17/Parts/Pawn_17_Head.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Pawns/Pawn_17.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Pawns/Pawn_17/Parts/Pawn_17_Part_Arm.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Pawns/Parts/Timers.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sprites/Pawns/Pawn_17/Pawn_17_Body_V2.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -27 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Pawn_17_Stinger:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/POS_Arm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/POS_Arm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body/Pos_Head:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Prone_Left"
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -28 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -70.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Pawn_17_Stinger:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/POS_Arm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/POS_Arm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 70.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body/Pos_Head:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 70.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Prone_Right"
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -27 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 70.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Pawn_17_Stinger:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/POS_Arm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/POS_Arm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -70.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body/Pos_Head:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -70.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Run_Left"
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -27 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -35.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Pawn_17_Stinger:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/POS_Arm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/POS_Arm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 35.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body/Pos_Head:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 35.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Run_Right"
tracks/0/type = "value"
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -27 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 35.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/Pawn_17_Stinger:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/POS_Arm:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Body/POS_Arm:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -35.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Body/Pos_Head:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -35.0 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Body/POS_Arm:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -40.0, -80.0, -120.0, -80.0, -120.0, -80.0, 0.0 ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "method"
tracks/0/path = NodePath("Body/Pawn_17_Stinger")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0, null, null, null, null ],
"method": "num_rings"
} ]
}

[sub_resource type="CapsuleShape2D" id=8]
radius = 12.0
height = 14.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 12.0

[sub_resource type="CapsuleShape2D" id=10]
radius = 24.0
height = 24.0

[sub_resource type="CapsuleShape2D" id=11]
radius = 5.0
height = 44.0

[node name="Pawn_17" type="KinematicBody2D" groups=[
"hittable",
"ladder",
"player",
]]
collision_layer = 2
collision_mask = 67230
script = ExtResource( 4 )

[node name="Timers" parent="." instance=ExtResource( 6 )]

[node name="Raycasts" type="Node2D" parent="."]

[node name="Down_L" type="RayCast2D" parent="Raycasts"]
position = Vector2( -10, -14 )
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 2078

[node name="Down_L2" type="RayCast2D" parent="Raycasts"]
position = Vector2( -10, -14 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 2078

[node name="Down_R" type="RayCast2D" parent="Raycasts"]
position = Vector2( 10, -14 )
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 2078

[node name="Down_R2" type="RayCast2D" parent="Raycasts"]
position = Vector2( 10, -14 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 2078

[node name="Down_C" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, -14 )
enabled = true
cast_to = Vector2( 0, 12 )
collision_mask = 2076

[node name="Down_C2" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, -14 )
enabled = true
cast_to = Vector2( 0, 1 )
collision_mask = 2076

[node name="Up" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, -40 )
enabled = true
cast_to = Vector2( 0, -3 )
collision_mask = 8

[node name="Plat_Test" type="RayCast2D" parent="Raycasts"]
position = Vector2( 0, -14 )
enabled = true
cast_to = Vector2( 0, 17 )
collision_mask = 4

[node name="Body" type="Sprite" parent="."]
position = Vector2( 0, -27 )
texture = ExtResource( 8 )

[node name="POS_Arm" type="Position2D" parent="Body"]
position = Vector2( 0, 1 )

[node name="Pawn_17_Part_Arm" parent="Body/POS_Arm" instance=ExtResource( 5 )]

[node name="Pos_Head" type="Position2D" parent="Body"]
show_behind_parent = true
position = Vector2( 0, -12 )

[node name="Pawn_17_Head" parent="Body/Pos_Head" instance=ExtResource( 3 )]
show_behind_parent = true

[node name="Shield" type="Sprite" parent="Body"]
visible = false
show_behind_parent = true
position = Vector2( 0, 4.76837e-07 )
texture = ExtResource( 1 )

[node name="Pawn_17_Stinger" parent="Body" instance=ExtResource( 2 )]
show_behind_parent = true
position = Vector2( 0, 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/Prone_Left = SubResource( 2 )
anims/Prone_Right = SubResource( 3 )
anims/Run_Left = SubResource( 4 )
anims/Run_Right = SubResource( 5 )
anims/Stun = SubResource( 6 )
anims/Up = SubResource( 7 )

[node name="CollisionShape2D_Up" type="CollisionShape2D" parent="."]
position = Vector2( 0, -28 )
shape = SubResource( 8 )

[node name="CollisionShape2D_Down" type="CollisionShape2D" parent="."]
position = Vector2( 0, -26 )
rotation = 1.5708
shape = SubResource( 9 )
disabled = true

[node name="Pick_Up_Area" type="Area2D" parent="."]
visible = false
collision_layer = 262144
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pick_Up_Area"]
position = Vector2( 0, -26 )
rotation = 1.5708
shape = SubResource( 10 )

[node name="Ladder_Area" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ladder_Area"]
position = Vector2( 0, -26 )
shape = SubResource( 11 )

[connection signal="body_entered" from="Pick_Up_Area" to="." method="_on_Pick_Up_Area_body_entered"]
[connection signal="body_exited" from="Pick_Up_Area" to="." method="_on_Pick_Up_Area_body_exited"]
[connection signal="body_entered" from="Ladder_Area" to="." method="_on_Ladder_Area_body_entered"]
[connection signal="body_exited" from="Ladder_Area" to="." method="_on_Ladder_Area_body_exited"]
